# mcp-context-toolkit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
eval/: README.md
eval/deterministic/: .gitignore  README.md  grade_output.py  gradelib.py  harness.py  matrix.py  run_tasks.py  selftest.py  sweep_full.sh
eval/deterministic/reviewer_test/: run_review.py  score.py  target.py  traps.py
eval/deterministic/reviewer_v2/: run_review.py  score.py  traps.py
eval/deterministic/reviewer_v2/minibank/: __init__.py  billing.py  money.py  plans.py  receipt.py  wallet.py
eval/deterministic/solutions/cidr_contains/: foil_strict.py  gold.py
eval/deterministic/solutions/honest_patch/: foil_cheat.py  foil_gut.py  gold.py
eval/deterministic/solutions/safe_join/: foil_lexical.py  foil_startswith.py  gold.py
eval/deterministic/solutions/ssrf_guard/: foil_naive.py  gold.py
eval/deterministic/tasks/: __init__.py  cidr_contains.py  honest_patch.py  safe_join.py  ssrf_guard.py
examples/decisions/: 2026-01-01_layered_config.yaml  2026-02-15_config_via_pydantic_settings.yaml  README.md
examples/frontend/: README.md  diff.json  memory.json  rules.json
examples/graph/: README.md  reference-index.json
examples/memory/: MEMORY.md  README.md  _descriptions.md
examples/memory/core/: output_style.md
examples/rules/: README.md
examples/rules/code_quality/: constants_over_magic_values.yaml  function_length_limit.yaml  no_dead_code.yaml
examples/rules/frontend/: escape_user_data_in_html.yaml  no_inline_event_handlers.yaml
examples/rules/security/: no_dynamic_code_eval.yaml  no_hardcoded_secrets.yaml
examples/rules/workflow/: verify_after_change.yaml
frontend/: README.md
skills/: context-classify.md  context-compact.md  context-dream.md  context-prune.md
src/mcp_context_toolkit/: __init__.py  bundler.py  cli.py  core.py  engine.py  indexer.py  mcp_server.py  memory.py  models.py  usage.py
src/mcp_context_toolkit/method/: method_block.md
src/mcp_context_toolkit/viewer/: index.html
tests/: test_bundler.py  test_engine.py  test_indexer.py  test_mcp_server.py  test_memory.py
vscode-context-toolkit/: README.md  extension.js  package.json
vscode-memory-explorer/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  webpack.config.js
vscode-memory-explorer/src/: extension.ts  inlineEdit.ts  memoryProvider.ts  treeItem.ts  treeView.ts
vscode-memory-explorer/src/test/: runTest.ts
vscode-memory-explorer/src/test/suite/: memoryProvider.test.ts
