[project]
name = "mcp-context-toolkit"
version = "1.0.0rc3"
description = "Feed any AI agent the right context on demand — file-scoped rules, frecency-ranked memory, and a navigable link-graph, from plain markdown/YAML stores (OKF-compatible)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Othmar Atzmüller" }]
requires-python = ">=3.11"
keywords = ["mcp", "rules", "memory", "frecency", "context", "ai-agents", "knowledge-graph", "okf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/othmaratzmueller-bit/mcp-context-toolkit"
Repository = "https://github.com/othmaratzmueller-bit/mcp-context-toolkit"
Issues = "https://github.com/othmaratzmueller-bit/mcp-context-toolkit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
context-toolkit-mcp = "mcp_context_toolkit.mcp_server:main"
context-toolkit-query = "mcp_context_toolkit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_context_toolkit = ["viewer/*.html", "viewer/*.js", "method/*.md"]
